5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4059/executions/1642_2449.log
== SUBMITION (2019-04-12 15:24:45) 
-- CODE:
a=float(input())
b=float(input())
c=float(input())
d=float(input())
e=float(input())
f=float(input())
x=(c*e-b*f)/(a*e-b*d)
y=(a*f-c*d)/(a*e-b*d)

if (a*e-bd=0):
	print("Nao tem solucao")
else:
	print(x)
	print(y)
-- EXECUTION TIME:
0.148427
-- ERROR:
  File "/home/codebench/codes/1642/2449/main.py", line 10
    if (a*e-bd=0):
              ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 15:24:49) 
-- CODE:
a=float(input())
b=float(input())
c=float(input())
d=float(input())
e=float(input())
f=float(input())
x=(c*e-b*f)/(a*e-b*d)
y=(a*f-c*d)/(a*e-b*d)

if (a*e-bd=0):
	print("Nao tem solucao")
else:
	print(x)
	print(y)
-- ERROR:
File "XXXX", line 10
    if (a*e-bd=0):
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 15:24:49) 
-- CODE:
a=float(input())
b=float(input())
c=float(input())
d=float(input())
e=float(input())
f=float(input())
x=(c*e-b*f)/(a*e-b*d)
y=(a*f-c*d)/(a*e-b*d)

if (a*e-bd=0):
	print("Nao tem solucao")
else:
	print(x)
	print(y)
-- ERROR:
File "XXXX", line 10
    if (a*e-bd=0):
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 15:24:58) 
-- CODE:
a=float(input())
b=float(input())
c=float(input())
d=float(input())
e=float(input())
f=float(input())
x=(c*e-b*f)/(a*e-b*d)
y=(a*f-c*d)/(a*e-b*d)

if (a*e-b*d=0):
	print("Nao tem solucao")
else:
	print(x)
	print(y)
-- EXECUTION TIME:
0.193198
-- ERROR:
  File "/home/codebench/codes/1642/2449/main.py", line 10
    if (a*e-b*d=0):
               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 15:25:09) 
-- CODE:
a=float(input())
b=float(input())
c=float(input())
d=float(input())
e=float(input())
f=float(input())
x=(c*e-b*f)/(a*e-b*d)
y=(a*f-c*d)/(a*e-b*d)

if (a*e-b*d==0):
	print("Nao tem solucao")
else:
	print(x)
	print(y)
-- EXECUTION TIME:
0.127442
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1642/2449/main.py", line 7, in <module>
    x=(c*e-b*f)/(a*e-b*d)
ZeroDivisionError: float division by zero

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 15:25:10) 
-- CODE:
a=float(input())
b=float(input())
c=float(input())
d=float(input())
e=float(input())
f=float(input())
x=(c*e-b*f)/(a*e-b*d)
y=(a*f-c*d)/(a*e-b*d)

if (a*e-b*d==0):
	print("Nao tem solucao")
else:
	print(x)
	print(y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    x=(c*e-b*f)/(a*e-b*d)
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 15:26:19) 
-- CODE:
a=float(input())
b=float(input())
c=float(input())
d=float(input())
e=float(input())
f=float(input())
x=(c*e-b*f)/(a*e-b*d)
y=(a*f-c*d)/(a*e-b*d)

if (a*e-b*d==0):
	print("Nao tem solucao")
else:
	print(x)
	print(y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    x=(c*e-b*f)/(a*e-b*d)
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 15:27:46) 
-- CODE:
a=float(input())
b=float(input())
c=float(input())
d=float(input())
e=float(input())
f=float(input())
q=a*e-b*d
if (q==0):
	print("Nao tem solucao")
else:
	x=(c*e-b*f)/(a*e-b*d)
   y=(a*f-c*d)/(a*e-b*d)
   print(x)
	print(y)
-- EXECUTION TIME:
0.173977
-- ERROR:
  File "/home/codebench/codes/1642/2449/main.py", line 12
    y=(a*f-c*d)/(a*e-b*d)
                        ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 15:27:47) 
-- CODE:
a=float(input())
b=float(input())
c=float(input())
d=float(input())
e=float(input())
f=float(input())
q=a*e-b*d
if (q==0):
	print("Nao tem solucao")
else:
	x=(c*e-b*f)/(a*e-b*d)
   y=(a*f-c*d)/(a*e-b*d)
   print(x)
	print(y)
-- ERROR:
File "XXXX", line 12
    y=(a*f-c*d)/(a*e-b*d)
                        ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 15:28:18) 
-- CODE:
a=float(input())
b=float(input())
c=float(input())
d=float(input())
e=float(input())
f=float(input())
q=a*e-b*d
if (q==0):
	print("Nao tem solucao")
else:
	x=(c*e-b*f)/q
   y=(a*f-c*d)/q
   print(x)
	print(y)
-- ERROR:
File "XXXX", line 12
    y=(a*f-c*d)/q
                ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 15:28:19) 
-- CODE:
a=float(input())
b=float(input())
c=float(input())
d=float(input())
e=float(input())
f=float(input())
q=a*e-b*d
if (q==0):
	print("Nao tem solucao")
else:
	x=(c*e-b*f)/q
   y=(a*f-c*d)/q
   print(x)
	print(y)
-- ERROR:
File "XXXX", line 12
    y=(a*f-c*d)/q
                ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 15:28:20) 
-- CODE:
a=float(input())
b=float(input())
c=float(input())
d=float(input())
e=float(input())
f=float(input())
q=a*e-b*d
if (q==0):
	print("Nao tem solucao")
else:
	x=(c*e-b*f)/q
   y=(a*f-c*d)/q
   print(x)
	print(y)
-- ERROR:
File "XXXX", line 12
    y=(a*f-c*d)/q
                ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 15:28:20) 
-- CODE:
a=float(input())
b=float(input())
c=float(input())
d=float(input())
e=float(input())
f=float(input())
q=a*e-b*d
if (q==0):
	print("Nao tem solucao")
else:
	x=(c*e-b*f)/q
   y=(a*f-c*d)/q
   print(x)
	print(y)
-- ERROR:
File "XXXX", line 12
    y=(a*f-c*d)/q
                ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 15:28:48) 
-- CODE:
a=float(input())
b=float(input())
c=float(input())
d=float(input())
e=float(input())
f=float(input())
q=a*e-b*d
if (q==0):
	print("Nao tem solucao")

else:
	x=(c*e-b*f)/q
   y=(a*f-c*d)/q
   print(x)
	print(y)
-- ERROR:
File "XXXX", line 13
    y=(a*f-c*d)/q
                ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 15:28:50) 
-- CODE:
a=float(input())
b=float(input())
c=float(input())
d=float(input())
e=float(input())
f=float(input())
q=a*e-b*d
if (q==0):
	print("Nao tem solucao")

else:
	x=(c*e-b*f)/q
   y=(a*f-c*d)/q
   print(x)
	print(y)
-- ERROR:
File "XXXX", line 13
    y=(a*f-c*d)/q
                ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 15:28:50) 
-- CODE:
a=float(input())
b=float(input())
c=float(input())
d=float(input())
e=float(input())
f=float(input())
q=a*e-b*d
if (q==0):
	print("Nao tem solucao")

else:
	x=(c*e-b*f)/q
   y=(a*f-c*d)/q
   print(x)
	print(y)
-- ERROR:
File "XXXX", line 13
    y=(a*f-c*d)/q
                ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 15:28:50) 
-- CODE:
a=float(input())
b=float(input())
c=float(input())
d=float(input())
e=float(input())
f=float(input())
q=a*e-b*d
if (q==0):
	print("Nao tem solucao")

else:
	x=(c*e-b*f)/q
   y=(a*f-c*d)/q
   print(x)
	print(y)
-- ERROR:
File "XXXX", line 13
    y=(a*f-c*d)/q
                ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 15:29:00) 
-- CODE:
a=float(input())
b=float(input())
c=float(input())
d=float(input())
e=float(input())
f=float(input())
q=a*e-b*d
if (q==0):
	print("Nao tem solucao")

	else:
	x=(c*e-b*f)/q
   y=(a*f-c*d)/q
   print(x)
	print(y)
-- ERROR:
File "XXXX", line 11
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 15:29:12) 
-- CODE:
a=float(input())
b=float(input())
c=float(input())
d=float(input())
e=float(input())
f=float(input())
q=a*e-b*d
if (q==0):
	print("Nao tem solucao")

else:
	x=(c*e-b*f)/q
  	y=(a*f-c*d)/q
   print(x)
	print(y)
-- ERROR:
File "XXXX", line 13
    y=(a*f-c*d)/q
                ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 15:29:16) 
-- CODE:
a=float(input())
b=float(input())
c=float(input())
d=float(input())
e=float(input())
f=float(input())
q=a*e-b*d
if (q==0):
	print("Nao tem solucao")

else:
	x=(c*e-b*f)/q
	y=(a*f-c*d)/q
   print(x)
	print(y)
-- ERROR:
File "XXXX", line 14
    print(x)
           ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 15:29:17) 
-- CODE:
a=float(input())
b=float(input())
c=float(input())
d=float(input())
e=float(input())
f=float(input())
q=a*e-b*d
if (q==0):
	print("Nao tem solucao")

else:
	x=(c*e-b*f)/q
	y=(a*f-c*d)/q
   print(x)
	print(y)
-- ERROR:
File "XXXX", line 14
    print(x)
           ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 15:29:17) 
-- CODE:
a=float(input())
b=float(input())
c=float(input())
d=float(input())
e=float(input())
f=float(input())
q=a*e-b*d
if (q==0):
	print("Nao tem solucao")

else:
	x=(c*e-b*f)/q
	y=(a*f-c*d)/q
   print(x)
	print(y)
-- ERROR:
File "XXXX", line 14
    print(x)
           ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 15:29:17) 
-- CODE:
a=float(input())
b=float(input())
c=float(input())
d=float(input())
e=float(input())
f=float(input())
q=a*e-b*d
if (q==0):
	print("Nao tem solucao")

else:
	x=(c*e-b*f)/q
	y=(a*f-c*d)/q
   print(x)
	print(y)
-- ERROR:
File "XXXX", line 14
    print(x)
           ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 15:29:24) 
-- CODE:
a=float(input())
b=float(input())
c=float(input())
d=float(input())
e=float(input())
f=float(input())
q=a*e-b*d
if (q==0):
	print("Nao tem solucao")

else:
	x=(c*e-b*f)/q
	y=(a*f-c*d)/q
	print(x)
	print(y)
-- OUTPUT:
Nao tem solucao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 15:29:45) 
-- CODE:
a=float(input())
b=float(input())
c=float(input())
d=float(input())
e=float(input())
f=float(input())
q=a*e-b*d
if (q==0):
	print("Nao tem solucao")

else:
	x=(c*e-b*f)/q
	y=(a*f-c*d)/q
	print(x)
	print(y)
-- EXECUTION TIME:
0.153019
-- TEST CASE 1:
---- input:
10.0
10.0
12.0
10.0
10.0
12.0
---- correct output:
Nao tem solucao
---- user output:
Nao tem solucao
-- TEST CASE 2:
---- input:
1.0
8.0
12.0
16.0
22.0
30.0
---- correct output:
-0.22641509433962265
1.528301886792453
---- user output:
-0.22641509433962265
1.528301886792453
-- TEST CASE 3:
---- input:
24.0
48.0
52.0
112.0
16.0
1.0
---- correct output:
-0.15705128205128205
1.1618589743589745
---- user output:
-0.15705128205128205
1.1618589743589745
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
